修改深拷贝错误

--- a/JS面试初级/手写深拷贝.html
+++ b/JS面试初级/手写深拷贝.html
@@ -9,7 +9,7 @@
     <script>
 function deepClone( obj = {} ){
 
-    if( typeof obj !== 'object' || obj != null ){
+    if( typeof obj !== 'object' || obj == null ){
         return obj
     }
 
