--- a/JS面试初级/面试代码题/对象排序.html
+++ b/JS面试初级/面试代码题/对象排序.html
@@ -21,6 +21,18 @@ const a = [
   { age: 91 },
 ];
 
+
+
+//---------------------------------------------------
+
+// function sortage(a,b){
+//     return a.age - b.age
+// }
+// a.sort(sortage)
+// console.log(a)
+
+//---------------------------------------------------
+
 // let arr = []
 // a.forEach((key)=> {
 //     console.log(key)
@@ -32,7 +44,9 @@ const a = [
 //     key.age = arr[x]
 //     x++
 // })
-console.log(a)
+// console.log(a)
+
+//---------------------------------------------------
 // TODO 请编码完成对数组a，根据数组子项的age字段进行排序，写多种实现方式可加分 
 
     </script>
