css画直角三角形

--- a/JS面试初级/春招复习code题/手画三角形.html
+++ b/JS面试初级/春招复习code题/手画三角形.html
@@ -11,7 +11,7 @@
             height: 0;
             border-top: 100px solid transparent;
             border-right: 100px solid transparent;
-            border-bottom: 100px solid transparent;
+            border-bottom: 100px solid green;
             border-left: 100px solid green;
         }
     </style>
